--- a/src/components/main/catalog/catalog.module.scss
+++ b/src/components/main/catalog/catalog.module.scss
@@ -1,12 +1,11 @@
 @import '@/styles/variables.scss';
 .catalog {
+  margin: 2rem auto;
   width: 100%;
-  min-height: 500px;
-  border: 1px solid black;
   .products {
-    padding: 2.5rem;
+    padding: 1.5rem 0;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 2.5rem;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 1.5rem;
   }
 }
