--- a/src/components/product-card/productCard.module.scss
+++ b/src/components/product-card/productCard.module.scss
@@ -1,65 +1,65 @@
 @import '@/styles/variables.scss';
 .productCard {
   position: relative;
-  border-radius: $br-medium;
-  //padding: 1rem;
+  padding: 1rem;
   overflow: hidden;
   box-shadow: $shadow-blue-gray-n;
   transition: $transition;
-  img {
-    border-radius: $br-medium;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  .imageContainer {
+    overflow: hidden;
     width: 100%;
-    height: auto;
+    height: 300px;
+    position: relative;
+    .image {
+      object-fit: contain;
+    }
   }
-  .cardDescription{
-    padding: 1rem;
-    .name{
+  .description {
+    padding: 1rem 0;
+    color: $color-blue-gray;
+    .name {
+      display: block;
+      padding-top: .2rem;
+      color: $color-green;
+      font-size: .9rem;
+      font-weight: 700;
+      }
+  }
+  .priceblock {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: $color_white;
+    .price {
+      font-weight: 500;
+      font-size: 1.1rem;
+      
       color: $color-blue-gray;
-      span{
-        color: $color_pink;
-      }
-    }
-    .height{
-      font-size: 1rem;
-    }
-    .color{
-      font-size: 1rem;
-    }
-    .priceblock{
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding-top: 0.5rem;
-      .price{
-        font-weight: 500;
-        font-size: 1.1rem;
-        color: $color-blue-gray;
-      }
     }
   }
-  
-  .favorite{
+
+  .favorite {
     position: absolute;
     top: 1rem;
     right: 1rem;
-    background-color: $color_white;
-    color: $color_pink;
+    color: $color-green;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 1.9rem;
     height: 1.9rem;
-    border-radius: 50%;
-    transition: $transition;
+    transition: all .2s ease-in;
+    background-color: transparent;
+    backdrop-filter: blur(10);
   }
-  .favorite:hover{
+  .favorite:hover {
     transform: scale(1.1);
     box-shadow: $shadow-blue-gray-n;
   }
-
-
 }
-.productCard:hover{
+.productCard:hover {
   box-shadow: $shadow-blue-gray-a;
 }
-
