--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,7 +11,6 @@ html,
 body {
   width: 100%;
   max-width: 100vw;
-  background-color: rgb(250 250 250/1);
   background-color: $color_white;
 }
 
@@ -32,6 +31,12 @@ button{
   margin: 0 auto;
 }
 
-.cart-visible {
+.noScroll {
   overflow: hidden;
+}
+
+.full{//////////////////////////////////
+  height: 500px;
+  width: 100%;
+  border: 1px solid black;
 }
