--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -55,8 +55,11 @@ button {
 }
 .swiper-lazy-preloader{
   color: $color_green;
- // border: 1px solid $color_green;
 }
+.swiper{
+  color: $color_green;
+}
+
 .preloader{
   color: $color_green;
  // border: 1px solid $color_green;
