--- a/src/components/cart/cart.module.scss
+++ b/src/components/cart/cart.module.scss
@@ -10,19 +10,18 @@
   overflow: hidden;
   transition: all ease-in 0.4s;
 }
-.wrapper.visible{
+.wrapper.visible {
   background-color: rgba(0, 0, 0, 0.2);
 }
-
 .cart {
   position: absolute;
   right: 0;
   top: 0;
   width: 400px;
   height: 100vh;
-  background-color: rgb(255, 255, 255, 0.9);
+  background-color: rgb(255, 255, 255, 0.95);
   backdrop-filter: blur(10px);
-  padding: 1rem;
+  padding: 1.5rem 1rem;
 }
 
 .cartEnter {
@@ -52,5 +51,43 @@
   }
 }
 .cartProducts {
-  margin: 2rem 0;
+  width: 100%;
+  margin: 2rem 0 1.5rem;
+  padding-right: 0.5rem;
+  height: calc(100% - 200px);
+  overflow-y: auto;
+
+  &::-webkit-scrollbar {
+    width: 0.4rem;
+  }
+  &::-webkit-scrollbar-track {
+    background-color: $color_lightgray;
+    border-radius: $br-small;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: $linear-gradient-green;
+    border-radius: $br-small;
+  }
+  &::-webkit-scrollbar-thumb:hover {
+    background: $linear-gradient-green-reverce;
+  }
+}
+.cartFooter {
+  .totalPrice {
+    text-align: right;
+    padding: 0 0.5rem 0.5rem;
+  }
+  > button {
+    margin-top: 0.5rem;
+  }
+}
+.empty {
+  margin-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  button{
+    margin-top: 1rem;
+  }
 }
