--- a/src/components/header/header1/header1.module.scss
+++ b/src/components/header/header1/header1.module.scss
@@ -10,22 +10,19 @@
     justify-content: space-between;
     .phones {
       display: flex;
-    }
-    .link,
-    button {
-      color: inherit;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 0.2rem 0.5rem;
-      transition: $transition;
-      border-radius: $br-small;
-      &:first-child {
-        margin-right: 1rem;
+      .link {
+        color: inherit;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0.2rem 0.5rem;
+        transition: $transition;
+        border-radius: $br-small;
       }
     }
-    button {
-      margin-left: 2rem;
+    button{
+      padding: .2rem .5rem;
+      margin-left: .5rem;
     }
   }
 }
