--- a/src/components/ui/button-icon/button-icon.module.scss
+++ b/src/components/ui/button-icon/button-icon.module.scss
@@ -7,7 +7,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 1rem;
   color: inherit; 
   overflow: hidden;
   transition: $transition;
@@ -24,14 +23,19 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background: $linear-gradient-green;
   background-color: $color_green;
 }
 
 
 .light{
   border: $border;
+  &:hover{
+    background: $linear-gradient-light;
+  }
   &:hover svg{
     transform: scale(1.1);
+    
   }
 }
 .accent{
@@ -42,15 +46,13 @@
 
 
 .small {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+.medium {
   width: 2rem;
   height: 2rem;
 }
-
-.medium {
-  width: 2.5rem;
-  height: 2.5rem;
-}
-
 .large {
   width: 3rem;
   height: 3rem;
