--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -17,7 +17,7 @@ $linear-gradient-blue-gray-reverce: linear-gradient(180deg,#2c3946, #2a3846);
 $linear-gradient-green: linear-gradient(180deg,#0a767c, #016a70);
 $linear-gradient-green-reverce: linear-gradient(180deg,#016a70, #0a767c);
 $linear-gradient-red: linear-gradient(180deg,#e24a4f, #f84147);
-$linear-gradient-red-reverce: linear-gradient(180deg,#f84147 #e24a4f);
+$linear-gradient-red-reverce: linear-gradient(180deg,#f84147, #e24a4f);
 $linear-gradient-lightblue: linear-gradient(180deg,#b2d3d3, #C4DFDF);
 $color_lightblue: #C4DFDF;
 
