--- a/src/components/cart/cart.module.scss
+++ b/src/components/cart/cart.module.scss
@@ -17,7 +17,8 @@
   position: absolute;
   right: 0;
   top: 0;
-  width: 400px;
+  width: 100%;
+  max-width: 400px;
   height: 100vh;
   background-color: rgb(255, 255, 255, 0.95);
   backdrop-filter: blur(10px);
