--- a/src/components/main/main-swiper/main-swiper.module.scss
+++ b/src/components/main/main-swiper/main-swiper.module.scss
@@ -3,7 +3,7 @@
 .container {
   width: 100%;
   height: 500px;
-  margin: 0 auto;
+  margin: 1rem auto;
   & > div > div:nth-child(2),
   & > div > div:nth-child(3) {
     display: none;
