--- a/src/components/ui/button-icon/button-icon.module.scss
+++ b/src/components/ui/button-icon/button-icon.module.scss
@@ -10,11 +10,13 @@
   color: inherit; 
   overflow: hidden;
   transition: $transition;
+  border-radius: $br_small;
   svg{
     transition: $transition;
   }
 }
 .count{
+  color: $color_white;
   position: absolute;
   top: .1rem;
   right: .1rem;
@@ -25,6 +27,7 @@
   justify-content: center;
   background: $linear-gradient-green;
   background-color: $color_green;
+  border-radius: $br_small
 }
 
 
@@ -40,7 +43,7 @@
 }
 .accent{
   &:hover{
-    background-color: $color-blue-gray;
+    background-color: $color_lightgray;
   }
 }
 
