--- a/src/components/ui/button/button.module.scss
+++ b/src/components/ui/button/button.module.scss
@@ -11,6 +11,7 @@
   justify-content: center;
   background-color: transparent;
   border: $border;
+  border-radius: $br-small;
   .icon {
     margin-right: 0.5rem;
     display: flex;
