--- a/src/components/ui/container/container.module.scss
+++ b/src/components/ui/container/container.module.scss
@@ -3,5 +3,9 @@
     width: 100%;
     max-width: 1900px;
     margin: 0 auto;
-    padding: 0 2rem;
+    padding: 0 1rem;
+    @media screen and (min-width: 1024px) {
+      padding: 0 2rem;
+    }
+    
   }
