--- a/src/components/header/search-block/search-block.module.scss
+++ b/src/components/header/search-block/search-block.module.scss
@@ -1,111 +1,89 @@
 @import '@/styles/variables.scss';
 
 .searchBlockContainer {
-  z-index: 20;
-  display: block;
   position: relative;
+  display: block;
+  height: 3rem;
   > button {
+    z-index: 15;
+    float: right;
     &:hover {
       background-color: transparent;
     }
   }
 }
-.block {
+.searchBlock {
   position: absolute;
-  background-color: $color_white;
-  top: 0;
   right: 0;
-  //right: 12.3rem;
-  z-index: 20;
-  transform: translateX(100%); // початковий зсув вгору для ефекту випливання
-  opacity: 0; // блок за замовчуванням прихований
-  transition: all linear .8s; // плавний перехід для анімації
-  &.visible {
-    z-index: 30;
-   // visibility: visible;
-    right: 0;
-    transform: translateX(0); // переміщення блока вниз при відображенні
-    opacity: 1; // показати блок
-
-  }
-
-  //Поле з інпут
-  .search {
-    position: relative;
-    width: 500px;
-    // border: 1px solid $color_white;
-    background-color: $color_green;
-    //border-radius: $br-small;
-    height: 3rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0.5rem;
-    @media screen and (min-width: 1024px) {
-     border-radius: $br-small;
-      
+  overflow: hidden;
+  width: 460px;
+  height: 3rem;
+  background-color: $color_green;
+  display: flex;
+  .block {
+    z-index: 10 !important;
+    width: 460px;
+    position: absolute;
+    background-color: black !important;
+    transform: translateX(100%); 
+    transition: all linear 0.8s; 
+    &.visible {
+      transform: translateX(0);
     }
-    .input {
-      position: relative;
-      color: $color_gray;
-      height: 2rem;
-      width: 450px;
-      padding: 0.2rem;
-      border-radius: $br-small;
-      border: 2px solid transparent;
-      box-shadow: $shadow-blue-gray-a;
-      &::placeholder {
+    //Блок з інпут
+    .search {
+      z-index: 10;
+      width: 100%;
+      background-color: $color_green;
+      height: 3rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0.5rem;
+      > svg {
+        z-index: 15;
+        cursor: pointer;
+      }
+      @media screen and (min-width: 1024px) {
+        border-radius: $br-small;
+      }
+      .input {
+        background-color: $color_white;
         color: $color_gray;
-      }
-      &:focus {
-        border-color: transparent; 
-        outline: none;
-      }
-    }
-    >svg, .clear{
-      background-color: transparent;
-      position: absolute;
-      right: 3rem;
-      color: $color_gray;
-      cursor: pointer;
-    }
-    button {
-      color: $color_white;
-      :hover{
-        svg{
-          transform: scale(1.2);
+        height: 2rem;
+        width: 410px;
+        padding: 0.2rem;
+        border-radius: $br-small;
+        border: 2px solid transparent;
+        box-shadow: $shadow-blue-gray-a;
+        &::placeholder {
+          color: $color_gray;
+        }
+        &:focus {
+          border-color: transparent;
+          outline: none;
         }
       }
-    }
-    .close{
-      cursor: pointer;
+      > svg {
+        background-color: transparent;
+        position: absolute;
+        right: 3rem;
+        color: $color_gray;
+        cursor: pointer;
+      }
     }
   }
-  //додаткове вікно
-  .searchList {
-    width: 450px;
-    color: $color_gray;
-    background-color: $color_white;
-    z-index: 30;
-    padding: 1rem;
-    border-radius: $br-small;
-    box-shadow: $shadow-blue-gray-a;
-    position: absolute;
-    left: 0.5rem;
-  }
 }
-
-.cartEnter {
-  transform: translateX(100%);
-}
-.cartEnterActive {
-  transform: translateX(0);
-  transition: all ease-in 1s;
-}
-.cartExit {
-  transform: translateX(0);
-}
-.cartExitActive {
-  transform: translateX(100%);
-  transition: all ease-in 1s;
+//поле виведення результатів пошуку
+.searchList {
+  position: absolute;
+  top: 50px;
+  right: 42px;
+  z-index: 50;
+  width: 410px;
+  color: $color_gray;
+  background-color: $color_white;
+  padding: 1rem;
+  border-radius: $br-small;
+  box-shadow: $shadow-blue-gray-a;
 }
