--- a/src/components/header/catalog-block/catalog-block.module.scss
+++ b/src/components/header/catalog-block/catalog-block.module.scss
@@ -1,16 +1,19 @@
 @import '@/styles/variables.scss';
 
 .catalogBlockContainer {
+ // position: relative;
   display: block;
   // position: relative;
   > button {
-    padding: 0.35rem 2rem;
+    padding: 0.35rem 3rem;
+    gap: .5rem;
   }
 
   .block {
     position: absolute;
     width: 100vw;
-    left: 0;
+    left: -2rem;
+    top: 4rem;
     z-index: 20;
     background-color: $color_white;
     border-radius: $br-small;
