--- a/src/components/header/mob-menu/mob-menu.module.scss
+++ b/src/components/header/mob-menu/mob-menu.module.scss
@@ -23,11 +23,21 @@
   z-index: 20;
   left: 0;
   top: 0;
-  width: 400px;
+  width: 100vw;
   height: 100vh;
   background-color: rgb(255, 255, 255, 0.95);
   backdrop-filter: blur(10px);
   padding: 1.5rem 1rem;
+  @media screen and (min-width: 768px) {
+    width: 400px;
+  }
+
+  .title{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
 }
 
 .cartEnter {
