--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,10 +1,11 @@
 @import '@/styles/variables.scss';
 .header {
   width: 100%;
+ // overflow: hidden;
+  position: relative;
   > div:first-child {
     display: none;
   }
-
   @media screen and (min-width: 1024px) {
     >div:first-child{
       display: flex;
