--- a/src/components/header/catalog-block/catalog-block.module.scss
+++ b/src/components/header/catalog-block/catalog-block.module.scss
@@ -1,19 +1,17 @@
 @import '@/styles/variables.scss';
 
 .catalogBlockContainer {
- // position: relative;
   display: block;
-  // position: relative;
   > button {
     padding: 0.35rem 3rem;
-    gap: .5rem;
+    gap: 0.5rem;
   }
 
   .block {
     position: absolute;
-    width: 100vw;
-    left: -2rem;
-    top: 4rem;
+    width: 100%;
+    left: 0;
+    top: 4.1rem;
     z-index: 20;
     background-color: $color_white;
     border-radius: $br-small;
