--- a/src/components/header/mob-menu/mob-menu.module.scss
+++ b/src/components/header/mob-menu/mob-menu.module.scss
@@ -27,7 +27,21 @@
   height: 100vh;
   background-color: rgb(255, 255, 255, 0.95);
   backdrop-filter: blur(10px);
-  padding: 1.5rem 1rem;
+  padding: 1.5rem 1rem 3rem;
+  >div{
+    width: 100%;
+    padding: .5rem 0;
+    border-top: $border;
+    margin: .5rem 0;
+    .title{
+      padding: 0;
+      margin: 0;
+    }
+    &:nth-child(1), &:nth-child(2), &:nth-child(3){
+      border-top: none;
+    }
+
+  }
   @media screen and (min-width: 768px) {
     width: 400px;
   }
@@ -36,9 +50,29 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 1rem;
+  }
+  .nav{
+    list-style: none;
+    li{
+      padding: 1rem .5rem;
+      border-bottom: $border;
+    }
+  }
+  .info{
+    >button{
+      margin: .5rem 0;
+    }
   }
 
 }
+
+
+
+
+
+
+
 
 .cartEnter {
   transform: translateX(-100%);
