--- a/src/components/ui/button/button.module.scss
+++ b/src/components/ui/button/button.module.scss
@@ -9,6 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: .5rem;
   background-color: transparent;
   border: $border;
   border-radius: $br-small;
