--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -12,7 +12,10 @@ body {
   width: 100%;
   max-width: 100vw;
   background-color: $color_white;
-  overflow-x: hidden;
+ // overflow-x: hidden;
+  &.noScroll {
+    overflow: hidden;
+  }
 }
 
 a {
@@ -32,9 +35,7 @@ button {
   margin: 0 auto;
 }
 
-.noScroll {
-  overflow: hidden;
-}
+
 
 .full {
   //////////////////////////////////
