--- a/src/components/header/mob-menu/mob-menu.module.scss
+++ b/src/components/header/mob-menu/mob-menu.module.scss
@@ -45,7 +45,7 @@
   .nav {
     nav {
       a {
-        padding: 1rem;
+        padding: .75rem;
         border-top: $border;
         transition: $transition;
         &:last-child{
