--- a/src/components/header/search/search.module.scss
+++ b/src/components/header/search/search.module.scss
@@ -20,11 +20,13 @@
       border-color: transparent;
       outline: none;
       border-bottom: 2px solid $color_lightgray;
+      border-radius: 0;
       &::placeholder {
         color: $color_gray;
       }
       &:focus {
         border-bottom: 2px solid $color_green;
+        border-radius: 0;
       }
     }
     > svg {
@@ -46,12 +48,16 @@
     backdrop-filter: blur(10px);
     padding: 1.5rem;
     position: absolute;
-    left: -1rem;
-    width: 100vw;
+    top: calc(100% + 1rem);
+    width: 100%;
     max-height: 300px;
     color: $color_gray;
     overflow-y: auto;
-    .footer{
+    box-shadow: $shadow-blue-gray-a;
+    border-radius: $br-small;
+    background-color: $color_white;
+
+    .footer {
       width: 100%;
       margin-top: 1rem;
       display: flex;
@@ -59,9 +65,8 @@
       justify-content: flex-end;
       color: $color_link;
       text-decoration: underline;
-      font-size: .9rem;
+      font-size: 0.9rem;
     }
-
     &::-webkit-scrollbar {
       width: 0.4rem;
     }
@@ -76,15 +81,5 @@
     &::-webkit-scrollbar-thumb:hover {
       background: $linear-gradient-green-reverce;
     }
-
-    @media screen and (min-width: 1024px) {
-      box-shadow: $shadow-blue-gray-a;
-      border-radius: $br-small;
-      background-color: $color_white;
-      width: 100%;
-      left: 0;
-      top: calc(100% + 1rem);
-    }
   }
-
 }
