--- a/src/components/header/header2/header2.module.scss
+++ b/src/components/header/header2/header2.module.scss
@@ -43,6 +43,9 @@
       }
     }
   }
+  .catalogButton{
+    width: 220px;
+  }
 
   .content {
     position: relative;
@@ -53,7 +56,7 @@
       gap: 3rem;
     }
     .logo {
-      width: 6rem;
+      width: 150px;
       height: 2.5rem;
       z-index: 50;
       display: flex;
