--- a/src/components/header/mob-menu/mob-menu.module.scss
+++ b/src/components/header/mob-menu/mob-menu.module.scss
@@ -18,87 +18,89 @@
     padding: 0.35rem 2rem;
   }
 }
-.mobMenu {
-  position: absolute;
-  z-index: 20;
-  left: 0;
-  top: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgb(255, 255, 255, 0.95);
-  backdrop-filter: blur(10px);
-  padding: 1.5rem 0 3.5rem;
-  overflow: auto;
-  .title {
-    padding: 0 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .search {
-    padding: 1rem 1rem 0;
-  }
-  .catalog {
-    margin: 1rem;
-  }
+.content {
+  position: relative;
 
-  .nav {
-    nav {
-      a {
-        padding: .75rem;
-        border-top: $border;
-        transition: $transition;
-        &:last-child{
-          border-bottom: $border;
-        }
-        &:hover {
-          background-color: $color_lightgray;
+  .mobMenu {
+    position: absolute;
+    z-index: 20;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgb(255, 255, 255, 0.95);
+    backdrop-filter: blur(10px);
+    padding: 1.5rem 0 3.5rem;
+    overflow: auto;
+    .title {
+      padding: 0 1rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .search {
+      padding: 1rem 1rem 0;
+    }
+    .catalog {
+      margin: 1rem;
+    }
+
+    .nav {
+      nav {
+        a {
+          padding: 0.75rem;
+          border-top: $border;
+          transition: $transition;
+          &:last-child {
+            border-bottom: $border;
+          }
+          &:hover {
+            background-color: $color_lightgray;
+          }
         }
       }
     }
-  }
-  .user{
-    display: flex;
-    align-items: center;
-    gap: .5rem;
-    padding: 1rem;
-    border-bottom: $border;
-    svg{
-      color: $color_green;
+    .user {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      padding: 1rem;
+      border-bottom: $border;
+      svg {
+        color: $color_green;
+      }
+      &:hover {
+        background-color: $color_lightgray;
+      }
     }
-    &:hover {
+
+    .callback {
+      margin-top: 1rem;
+    }
+
+    .info {
+      padding: 1rem;
+      > button {
+        margin-bottom: 1rem;
+      }
+    }
+    @media screen and (min-width: 768px) {
+      width: 400px;
+    }
+    &::-webkit-scrollbar {
+      width: 0.4rem;
+    }
+    &::-webkit-scrollbar-track {
       background-color: $color_lightgray;
+      border-radius: $br-small;
     }
-
-
-  }
-
-  .callback{
-    margin-top: 1rem;
-  }
-  
-  .info {
-    padding: 1rem;
-    > button {
-      margin-bottom: 1rem;
+    &::-webkit-scrollbar-thumb {
+      background: $linear-gradient-green;
+      border-radius: $br-small;
     }
-  }
-  @media screen and (min-width: 768px) {
-    width: 400px;
-  }
-  &::-webkit-scrollbar {
-    width: 0.4rem;
-  }
-  &::-webkit-scrollbar-track {
-    background-color: $color_lightgray;
-    border-radius: $br-small;
-  }
-  &::-webkit-scrollbar-thumb {
-    background: $linear-gradient-green;
-    border-radius: $br-small;
-  }
-  &::-webkit-scrollbar-thumb:hover {
-    background: $linear-gradient-green-reverce;
+    &::-webkit-scrollbar-thumb:hover {
+      background: $linear-gradient-green-reverce;
+    }
   }
 }
 
