--- a/src/components/mob-nav-catalog/mob-nav-catalog.module.scss
+++ b/src/components/mob-nav-catalog/mob-nav-catalog.module.scss
@@ -2,30 +2,29 @@
 
 .catalog {
   position: absolute;
-  width: 100%;
   z-index: 20;
-  //background-color: $color_white;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
   background-color: rgb(255, 255, 255, 0.95);
   backdrop-filter: blur(10px);
-  border-radius: $br-small;
-  box-shadow: $shadow-blue-gray-a;
-  color: $color_gray;
-  font-size: 0.8rem;
-  display: none;
-  top: 66px;
-  left: 0;
-  height: auto;
- // padding: 1rem 5rem;
+  padding: 1.5rem 0 3.5rem;
+  overflow: auto;
   &.visible {
     display: block;
   }
-  .content{
-    position: relative;
-    .close{
-      position: absolute;
-      right: 1rem;
-      top: 1rem;
+  .navigation{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 1rem;
+    >button{
+      height: 2rem;
     }
   }
-
+  .title{
+    padding: 1rem;
+  }
+  
 }
